--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="javascript:app.clear();" class="button">Clear</a>
       </div>
       <div class="col right">
-        <h1><em>Splatter</em> by <a href="http://stamen.com">Stamen Design</a></h1>
+        <h1><a href="http://github.com/heisters/splatter"><em>Splatter</em></a></h1>
       </div>
     </div>
   </body>
